--- a/src/Collatz/Collatz.csproj
+++ b/src/Collatz/Collatz.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Overleaf\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Overleaf\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Overleaf\**" />
+  </ItemGroup>
+
 </Project>
